fixed loading screen info align

--- a/src/Components/LoadingScreen/LoadingScreen.scss
+++ b/src/Components/LoadingScreen/LoadingScreen.scss
@@ -15,6 +15,7 @@
     }
 
     .loading-screen__loading-info {
+        text-align: center;
         color: white;
         font-size: variables.$fs-600;
         font-weight: 700;
